# tunestash

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .python-version  AGENTS.md  CELERY_MIGRATION_SUMMARY.md  CHANGELOG.md  CI_CD_README.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  MIGRATION_POSTGRESQL.md  Makefile  PREMIUM_DETECTION_IMPLEMENTATION.md  README.md  TODO.md  dev.py  docker-bake.hcl  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.yaml  tox.ini
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-branch.yml  ci.yml  main.yml  type-check.yml
api/: README.md  __init__.py  celery_app.py  celery_beat_schedule.py  docker_test_settings.py  pytest.ini  pytest_docker.ini  run.py  settings.py  settings.yaml.example  setup.cfg  test_celery_docker.py  test_settings.py  urls.py
api/downloader/: cookie_validator.py  default_download_settings.py  downloader.py  lyrics.py  m3u_writer.py  premium_detector.py  spotdl_override.py  spotdl_wrapper.py  spotify_auth_helper.py  spotipy_tasks.py  track_matcher.py  utils.py
api/downloader/providers/: __init__.py  audio_converter.py  base.py  fallback.py  metadata.py  monochrome.py  qobuz.py  tidal.py  tidal_endpoints.py  validation.py  youtube.py
api/lib/: config_class.py
api/library_manager/: admin.py  apps.py  checks.py  helpers.py  metadata_detection.py  models.py  signals.py  task_priorities.py  tasks.py  validation.py  validators.py
api/library_manager/migrations/: 0001_initial.py  0002_taskhistory.py  0003_taskhistory_last_heartbeat_and_more.py  0004_alter_taskhistory_last_heartbeat.py  0005_taskhistory_library_man_status_dfb074_idx_and_more.py  0006_rename_tables.py  0007_filepath_deduplication.py  0008_increase_name_field_lengths.py  0009_state_reconciliation.py  0010_auto_20250924_1707.py  0011_fix_crontab_schedules.py  0012_artist_last_downloaded_at.py  0013_add_spotify_oauth_token.py  0014_normalize_playlist_urls.py  0015_normalize_gids.py  0016_add_last_download_attempt_to_song.py  0017_clear_periodic_task_entries.py  0018_add_playlist_status.py  0019_add_snapshot_id_to_tracked_playlist.py  0020_add_failure_reason_and_last_failed_at_to_song.py  0021_add_isrc_to_song.py  0022_add_album_to_song.py  0023_add_spotify_rate_limit_state.py  0024_add_task_history_started_at_id_index.py  0025_multi_tier_rate_limit.py  0026_add_pending_metadata_update.py  0027_add_app_metric.py  0028_add_download_provider_and_upgrade_attempts.py  0029_notification_state.py  0030_add_external_list_models.py  0031_add_sync_error_status.py  0032_add_youtube_music_source.py  0033_alter_externallist_source.py  0034_add_deezer_youtube_ids.py  0035_album_artist_fk_step1.py  0036_album_artist_fk_step2.py  0037_album_spotify_uri_blank_true.py  0038_artist_deezer_migration_status.py  0039_playlist_provider_field.py  0040_add_deezer_track_id_to_trackmappingcache.py  (+14 more)
api/library_manager/tasks/: __init__.py  artist.py  core.py  deezer.py  diagnostics.py  download.py  external_list.py  maintenance.py  metadata.py  migration.py  notification.py  periodic.py  playlist.py  settings.py  upgrade.py
api/queuetip/: admin.py  apps.py  models.py  permissions.py  signals.py  tasks.py
api/queuetip/migrations/: 0001_initial.py  0002_exportsnapshot_exportsnapshottrack.py  0003_externalservicelink.py  0004_magiclinkrequestlog.py  0005_uuidify_exportsnapshot.py  0006_account_session_epoch.py  0007_queuetipsignupallowlist.py  0008_bulkimportjob_total_tracks.py  0009_export_targets_subsonic.py  0010_subsonic_opensubsonic_extensions.py  0011_subsonicconnection_auth_mode.py  0012_drop_sync_mode.py  0013_drop_export_snapshots.py  0014_magiclinkrequestlog_rate_limit_indexes.py  0015_queuetipsignupallowlist_invited_by.py  0016_account_last_signed_in_at.py  0017_playlistexporttarget_preferences.py  (+3 more)
api/scripts/: debug_health_check.py  generate_types.py  health_check.py  setup.py  startup.sh  worker_startup.sh
api/src/: __init__.py  main.py  schema.py
api/tests/: conftest.py  factories.py  test_pagination.py
config/: settings.yaml
docs/: CONTRIBUTING.md  DEBUGGING.md  MIGRATION_GUIDE.md  TODO.md
docs/queuetip/: README.md  subsonic-sync-design.md
docs/specs/: 2026-03-31-ui-polish-design.md  2026-03-31-ui-polish-plan.md  2026-05-19-queuetip-collaborative-playlist-design.md  2026-05-19-queuetip-phase-0-implementation-plan.md  2026-05-19-queuetip-phase-0-resolution-design.md  2026-05-19-queuetip-phase-1-core-design.md  2026-05-19-queuetip-phase-1a-foundation-plan.md  2026-05-19-queuetip-phase-1b-playlists-plan.md  2026-05-19-queuetip-phase-1c-contributions-plan.md  2026-05-19-queuetip-phase-2a-selection-engine-plan.md  2026-05-19-queuetip-phase-2b-frontend-plan.md  2026-05-19-queuetip-phase-3-spotify-export-plan.md  2026-05-19-songboard-collaborative-playlist-design.md  2026-05-19-songboard-phase-0-resolution-design.md
frontend/: .dockerignore  .eslintignore  .npmrc  .prettierignore  CODE_REVIEW_FINDINGS.md  Dockerfile  README.md  REFACTORING_PROGRESS.md  codegen.local.yml  codegen.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  tsconfig.types.json  vite.config.ts  vitest.config.ts
frontend/.husky/: pre-commit
frontend/docs/: GRAPHQL_SCHEMA.md
frontend/scripts/: check-newlines.js  fix-newlines.js  run-graphql-tests.js  test-graphql-operations.js  validate-graphql-manual.js  validate-schema.js  validate-types-ci.js
frontend/src/: apolloClient.ts  index.css  main.tsx  routeTree.gen.ts  router.ts  vite-env.d.ts
queuetip-frontend/: .eslintrc.cjs  Dockerfile  codegen.ts  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
queuetip-frontend/src/: main.tsx  routeTree.gen.ts
scripts/: check-repo-newlines.py  install-git-hooks.sh  test-ci-locally.sh
(+439 files in other folders)
